==================== 2.22.1.3 ====================

2008-04-11  Vincent Untz  <vuntz@gnome.org>

	* system-timezone.c: (system_timezone_write_key_file),
	(recursive_compare), (files_are_identical_inode),
	(files_are_identical_content),
	(system_timezone_read_etc_localtime_content),
	(system_timezone_is_zone_file_valid),
	(system_timezone_set_etc_timezone): s/unsigned int/gsize/ since it's
	not the same on 64 bits machines. Fix bug #527441.
	Thanks to Jan de Groot <jan@jgc.homeip.net> for debugging this.

2008-04-11  Vincent Untz  <vuntz@gnome.org>

	Add support for Arch Linux system timezone.

	* system-timezone.c: (system_timezone_read_etc_rc_conf),
	(system_timezone_write_etc_rc_conf): new methods for config in Arch
	Linux
	Add the new methods to the list of methods.

2008-04-11  Vincent Untz  <vuntz@gnome.org>

	* system-timezone.c: add/clarify some comments
	change the default order of methods to get the timezone. First look if
	/etc/locatime is a symlink, since it's cheap.
	(system_timezone_strip_path_if_valid): new, to strip the prefix path of
	a timezone filename
	(system_timezone_read_etc_localtime_softlink): use
	system_timezone_strip_path_if_valid() to also strip "posix/" if this is
	the case
	(recursive_compare): now use system_timezone_strip_path_if_valid()

2008-04-11  Vincent Untz  <vuntz@gnome.org>

	* system-timezone.c: (recursive_compare): handle the case where the
	found file is /usr/share/zoneinfo/posix/Europe/Paris (ie, strip the
	"posix/" too)
	(system_timezone_read_etc_localtime_content): plug leak

2008-04-10  Vincent Untz  <vuntz@gnome.org>

	Improve how the find entry is filled: always use the location name as a
	start, and put the cursor at the end of the string so the user can
	continue to type. Fix bug #527403
	Be more solid against cases where there's no Locations.xml

	* clock.c: (fill_location_tree): be more solid
	(find_next_location): ditto
	(find_entry_changed): ditto
	(find_weather_code): ditto