@@ -1,3 +1,7 @@
+2008-04-16  Matthias Clasen  <mclasen@redhat.com>
+
+	* clock.c: Make the help button on the preference dialog work.
+
 ==================== 2.22.1.3 ====================
 
 2008-04-11  Vincent Untz  <vuntz@gnome.org>
